--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #bd5d38;
+  --bs-primary: #198754;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -168,6 +168,32 @@ h6, .h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+}
+
+.downloadcv-anchor {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 3.5rem;
+  background-color: #495057;
+  color: #fff;
+  border-radius: 100%;
+  font-size: 1.5rem;
+  margin-right: 1.5rem;
+}
+.downloadcv {
+  align-items: center;
+  justify-content: center;
+  height: 3.5rem;
+  width: 10rem;
+  background-color: #495057;
+  color: #fff;
+  border-radius: 20px;
+  font-size: 1rem;
+  border-color: #495057;
+  text-align: center;
+  border: none;
+  outline: none;
 }
 
 abbr[title] {
