--- a/css/styles.css
+++ b/css/styles.css
@@ -36,14 +36,14 @@
   --bs-gray-900: #212529;
   --bs-primary: #198754;
   --bs-secondary: #6c757d;
-  --bs-success: #198754;
+  --bs-success: #125a38;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 189, 93, 56;
-  --bs-secondary-rgb: 108, 117, 125;
+  --bs-primary-rgb: 25, 135, 84;
+  --bs-secondary-rgb: 25, 135, 84;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -73,8 +73,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #bd5d38;
-  --bs-link-hover-color: #974a2d;
+  --bs-link-color: #198754;
+  --bs-link-hover-color: #125a38;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -197,7 +197,7 @@ p {
   vertical-align: middle;
 }
 .downloadcv:hover {
-  background-color: #bd5d38;
+  background-color: #198754;
 }
 
 abbr[title] {
@@ -10969,7 +10969,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: #198754;
 }
 
 .dev-icons {
